# fastapi-lsp

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  PKGBUILD  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  release.yml
e2e/: conftest.py  test_check.py  test_codelens.py  test_diagnostics.py  test_diagnostics_extended.py  test_document_link.py  test_goto.py  test_hover.py  test_inlay_hints.py  test_lifecycle.py  test_lifecycle_extended.py  test_noqa.py  test_routes.py  test_starlette_health.py  test_symbols.py  test_template_completion.py
e2e/editor/: minimal_init.lua
e2e/editor/specs/: smoke_spec.lua
e2e/fixtures/bookshop/app/: deps.py  main.py
e2e/fixtures/bookshop/app/routers/: books.py  broken_routes.py
e2e/fixtures/bookshop/app/templates/: books.html
e2e/fixtures/bookshop/tests/: test_books.py
e2e/fixtures/codelens_fixture/: app.py  test_items.py
e2e/fixtures/di_cycle/: app.py
e2e/fixtures/di_override_unused/: conftest.py
e2e/fixtures/diagnostics/: app.py
e2e/fixtures/factory/: app.py
e2e/fixtures/goto_fixture/: app.py
e2e/fixtures/health/: app.py
e2e/fixtures/noqa_fixture/: app.py
e2e/fixtures/srclayout/src/app/: main.py
e2e/fixtures/tpl_workspace/: app.py  pyproject.toml
e2e/fixtures/tpl_workspace/templates/: books.html
editors/helix/: languages.toml
editors/neovim/: fastapi_lsp.lua
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs
pkg/aur/: PKGBUILD
scripts/: install-zed-extension.sh
specs/: 01-overview.md  constitution.md  glossary.md  index.md  roadmap.md
specs/features/: F00-template.md  F01-route-index.md  F02-diagnostics.md  F03-dependency-graph.md  F04-test-linking.md  F05-templates.md  F06-starlette-routing.md  F07-editor-integration.md  F08-code-actions.md  F09-env-settings.md  F10-hover.md  F11-completion.md  F12-symbols.md  F13-navigation.md  F14-inlay-hints.md  F15-code-lens.md  F16-middleware.md  F17-cli.md
specs/foundations/: E01-architecture.md  E02-folder-structure.md  E03-tech-stack.md  E07-data-model.md  E15-app-config.md  E17-testing.md
src/: check.rs  cli.rs  config.rs  fixes.rs  linking.rs  main.rs  offset.rs  routes.rs  server.rs  state.rs  uri.rs  util.rs  watcher.rs
src/fastapi_lsp_e2e.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/features/: code_actions.rs  codelens.rs  completion.rs  diagnostics.rs  document_link.rs  goto.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  symbols.rs
src/parsing/: annotated.rs  clients.rs  deps.rs  dotenv.rs  env.rs  middleware.rs  mod.rs  models.rs  python.rs  routes.rs  security.rs  templates.rs  url_for.rs
(+1 files in other folders)
